--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'thanh.karaokevitinh'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "thanh.karaokevitinh"
         minSdk 24
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    //implementation 'com.google.zxing:core:3.5.2'
 
     implementation libs.appcompat
     implementation libs.material
